# xxxd

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  package.yaml
.github/workflows/: ci.yml
app/: CMakeLists.txt  xxxd.toit
tests/: CMakeLists.txt  compare-unix.sh  compare-xxd.sh  fail-windows.cmake  fail-xxd-new.cmake  fail-xxd-old.cmake  fail.cmake  get-xxd-version.sh  gold-test.sh  grouping-0.options  grouping-4.options  grouping-5.options  grouping-8.options  include-format-upper-case-variables.options  indentation.xxxd-options  length-and-offset.options  little-endian-grouping-16.options  little-endian-grouping-9.xxxd-options  little-endian.xxxd-options  offset.options  postscript-and-elide-zeros.options  postscript-upper-case.options  xxxd-test.sh
tests/gold/compact/: all-zeros.dump  hello.dump  input.dump  two-zero-zones.dump  utf-8.dump  zeros-at-end.dump  zeros-in-beginning.dump  zeros-in-middle.dump
tests/gold/indentation/: all-zeros.dump  empty.dump  hello.dump  input.dump  two-zero-zones.dump  utf-8.dump  zeros-at-end.dump  zeros-in-beginning.dump  zeros-in-middle.dump
tests/gold/little-endian/: input.dump  zeros-at-end.dump  zeros-in-middle.dump
tests/gold/little-endian-grouping-9/: all-zeros.dump  two-zero-zones.dump  zeros-in-beginning.dump
tests/gold/tabs/: all-zeros.dump  empty.dump  hello.dump  input.dump  two-zero-zones.dump  utf-8.dump  zeros-at-end.dump  zeros-in-beginning.dump  zeros-in-middle.dump
tests/gold/tr-delete/: furious.out  now.out  quick.out  shout.out  xyz.out
tests/gold/tr-no-utf8/: furious.out  lake.out  now.out  quick.out  shout.out  xyz.out
tests/gold/xxxd-compact/: all-zeros.out  empty.out  hello.out  input.out  two-zero-zones.out  utf-8.out  zeros-at-end.out  zeros-in-beginning.out  zeros-in-middle.out
tests/gold/xxxd-indentation/: all-zeros.out  empty.out  hello.out  input.out  two-zero-zones.out  utf-8.out  zeros-at-end.out  zeros-in-beginning.out  zeros-in-middle.out
tests/gold/xxxd-little-endian/: all-zeros.out  hello.out  two-zero-zones.out  zeros-in-beginning.out
tests/gold/xxxd-little-endian-grouping-9/: hello.out  utf-8.out  zeros-at-end.out  zeros-in-middle.out
tests/gold/xxxd-tabs/: all-zeros.out  hello.out  input.out  two-zero-zones.out  utf-8.out  zeros-at-end.out  zeros-in-beginning.out  zeros-in-middle.out
tests/requires-new-xxd/: include-format-numeric-name.options
tests/tr/: delete.tr-options  no-utf8.tr-options
tests/tr-unix/: all-x.options  keep-only-lower-case.options  rot13.options  squash-vowels.options
tests/xxd-unix/: elide-zeros-narrow.options  grouping-1.options  grouping-3.options  grouping-9.options  include-format-funky-name-upper-case.options  include-format-funky-name.options  include-format-upper-case-hex.options  include-format-very-funky-name.options  include-format.options  little-endian-grouping-4-columns-6.options  little-endian-grouping-8.options  max-len.options  seek-1.options
tests/xxxd/: compact.xxxd-options  tabs.xxxd-options
tools/: gitversion.cmake  toit.cmake
